emails to admin, contact us, welcome bonus, mebership type

--- a/referral/static/referral/assets/css/style.css
+++ b/referral/static/referral/assets/css/style.css
@@ -413,7 +413,7 @@ button:hover {
   margin-bottom: 20px;
 }
 
-#id_i_am, #select {
+#id_i_am, #select, #id_site {
   width: 100%;
   height: 40px;
   border: 1px solid var(--primary-color);
