--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -1,45 +1,143 @@
-{% extends "users/userbase.html" %}
-{% load crispy_forms_tags %}
-{% block content %}
+    {% load static %}
+    {% if validlink %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'referral/assets/image/favicon.ico' %}">
 
-  <div class="container">
+    <title>Reset Password | One Vihav</title>
+    <!-- style -->
+    <link rel="stylesheet" href="{% static 'referral/assets/css/style.css' %}" />
+  </head>
+  <body>
 
-    <!-- Outer Row -->
-    <div class="row justify-content-center">
-
-      <div class="col-xl-10 col-lg-12 col-md-9">
-
-        <div class="card o-hidden border-0 shadow-lg my-5">
-          <div class="card-body p-0">
-            <!-- Nested Row within Card Body -->
-            <div class="row">
-              <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-              <div class="col-lg-6">
-                <div class="p-5">
-                  <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Reset Password</h1>
-                  </div>
-                          <form class="user" method="POST">
-          {% csrf_token %}
-          <fieldset class="form-group">
-            {{ form|crispy }}
-          </fieldset>
-         <div class="form-group">
-                    <button class="btn btn-primary btn-user btn-block" type="submit">Reset Password</button>
-         </div>
-      </form>
-                
-                </div>
-              </div>
-            </div>
+    <section class="login-screen">
+      <!-- flex box start -->
+      <div class="container">
+        <div class="row">
+          <div class="col col-1">
+            <img src="{% static 'referral/assets/image/LogoBox.png' %}"alt="logo" class="logo-box" />
           </div>
+          <div class="col col-2">
+            <form method="POST" class="form">
+              <h3 class="form-heading">Reset password</h3>
+              <div class="form-fields">
+              {{ form.non_field_errors }}
+              {% csrf_token %}
+                <div class="form-group">
+                  <label for="email"> New password*</label>
+                  {{ form.new_password1.errors }}
+                  {{ form.new_password1 }}
+                </div>
+                <div class="form-group">
+                  <label for="email"> Confirm New Password*</label>
+                  {{ form.new_password2.errors }}
+                  {{ form.new_password2 }}
+                </div>                
+                <div class="form-group">
+                <button type="submit" name="login" class="action-button">
+                  Reset Password
+                </button>
+              </div>
+              </div>
+              <div class="more-action">
+                <a href="{% url 'login' %}">Back to login &rarr;</a>
+                <a href="{% url 'signup' %}">Don’t have login details? <span>Register now</span></a>
+              </div>
+            </form>
+          </div>
+
+<div id="content-wrapper" class=".mh-100 m-5 d-flex flex-column">
+  <div class="container d-flex h-100">
+      <div class="card-body align-items-center h-100">
+          <div class="text-center">
+             <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 15rem;" src="{% static 'referral/img/undraw_secure_login_pdn4.svg' %}" alt="">
+          </div>
+          <center><h2><b>Your password has been set. You may go ahead and Login</h2>
+<br>
+          <h2><a href="{% url 'login' %}">Login Now &rarr;</a></h2>
+
+</div>
+</div>
+</div>
+        
         </div>
-
       </div>
+      <!-- flex box end -->
+    </section>
 
-    </div>
+  </body>
+</html>
 
-  </div>
 
-{% endblock content %}
+{% else %}
+{% load static %}
+{% load gravatar %}
+{% load percentage %}
+{% load crispy_forms_tags %}
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Reset Password | One Vihav</title>
+  <link rel="shortcut icon" type="image/x-icon" href="{% static 'referral/assets/image/favicon.ico' %}">
+  <!-- Custom fonts for this template-->
+  <link rel="stylesheet" type="text/css" href="{% static 'referral/vendor/fontawesome-free/css/all.min.css' %}">
+
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+ 
+  <!-- Custom styles for this template-->
+  <link rel="stylesheet" type="text/css" href="{% static 'referral/css/sb-admin-2.css' %}">
+<!-- Hotjar Tracking Code for https://vihavpriviledge.herokuapp.com/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1956923,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
+</head>
+
+<body id="page-top">
+
+  <!-- Page Wrapper -->
+  <div id="wrapper">
+
+
+<div id="content-wrapper" class=".mh-100 m-5 d-flex flex-column">
+  <div class="container d-flex h-100">
+      <div class="card-body align-items-center h-100">
+          <div class="text-center">
+             <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 14rem;" src="{% static 'referral/img/undraw_access_denied_6w73.svg' %}" alt="">
+          </div>
+          <center><h2><b>The password reset link was invalid, possibly because it has already been used.
+      Please request a new password reset.</h2>
+<br>
+          <h3><a href="{% url 'password_reset' %}">Request A New Password Reset &rarr;</a></h3>
+
+</div>
+</div>
+</div>
+</div>
+
+</body>
+
+</html>
+
+{% endif %}  
