--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -26,10 +26,12 @@
               {% csrf_token %}
                 <div class="form-group">
                   <label for="email"> Email address*</label>
+                  {{ form.username.errors }}
                   {{ form.username }}
                 </div>
                 <div class="form-group">
                   <label for="password"> Password*</label>
+                  {{ form.password.errors }}
                   {{ form.password }}
                 </div>
                 <div class="form-group">
