--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,39 +1,70 @@
-{% extends "users/userbase.html" %}
+{% load static %}
+{% load gravatar %}
+{% load percentage %}
 {% load crispy_forms_tags %}
-{% block content %}
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Reset Password | One Vihav</title>
+  <link rel="shortcut icon" type="image/x-icon" href="{% static 'referral/assets/image/favicon.ico' %}">
+  <!-- Custom fonts for this template-->
+  <link rel="stylesheet" type="text/css" href="{% static 'referral/vendor/fontawesome-free/css/all.min.css' %}">
+
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+ 
+  <!-- Custom styles for this template-->
+  <link rel="stylesheet" type="text/css" href="{% static 'referral/css/sb-admin-2.css' %}">
+<!-- Hotjar Tracking Code for https://vihavpriviledge.herokuapp.com/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1956923,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
+</head>
+
+<body id="page-top">
+
+  <!-- Page Wrapper -->
+  <div id="wrapper">
 
 
-
-  <div class="container">
-
-    <!-- Outer Row -->
-    <div class="row justify-content-center">
-
-      <div class="col-xl-10 col-lg-12 col-md-9">
-
-        <div class="card o-hidden border-0 shadow-lg my-5">
-          <div class="card-body p-0">
-            <!-- Nested Row within Card Body -->
-            <div class="row">
-              <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-              <div class="col-lg-6">
-                <div class="p-5">
-  <div class="alert alert-info">
-    <h2> An email has been sent successfully </h2>
-  </div>
-                
-                </div>
-              </div>
-            </div>
+<div id="content-wrapper" class=".mh-100 m-5 d-flex flex-column">
+  <div class="container d-flex h-100">
+      <div class="card-body align-items-center h-100">
+          <div class="text-center">
+             <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 15rem;" src="{% static 'referral/img/undraw_Mail_sent_re_0ofv.svg' %}" alt="">
           </div>
-        </div>
+          <center><h2><b>We've emailed you instructions for setting your password. </b></h2>
+            <h5 class="p-4">
+If an account exists with the email you entered.
+    You should receive them shortly.
+    <br>
+If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder.</h5>
 
-      </div>
+          <a href="{% url 'login' %}">Back &rarr;</a>
 
-    </div>
+</div>
+</div>
+</div>
+</div>
 
-  </div>
+</body>
 
-
-{% endblock content %}
-
+</html>
