emails to admin, contact us, welcome bonus, mebership type

--- a/referral/templates/referral/dashboard.html
+++ b/referral/templates/referral/dashboard.html
@@ -427,11 +427,11 @@ Your One Vihav account is under review. Our support team will process your appli
    </div>
   <!-- End of Page Wrapper -->
 
-
+ <!--
 <div class="h_iframe">
 <iframe src="http://vihavprivilege.pe.hu/" target="_blank"  target="_top" frameborder="0" allowfullscreen></iframe>
 </div>
-              <!-- Footer --
+              Footer --
               <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                   <div class="copyright text-center my-auto">
